--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p> I was born in Helsinki, and have lived in Beijing and
                 Stockholm. These days, I'm attending a Full Stack
                 Software Engineering bootcamp at
-                <a href="https://www.xccelerate.co/">Xccelerate</a>.
+                <a style="color: inherit" href="https://www.xccelerate.co/">Xccelerate</a>.
                 <br><br>
                 To me, programming is a creative outlet and a means
                 to pursue my ideas and visions to create better products
