--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
     <div class="section">
         <div class="snippet-container">
             <h1>ABOUT ME</h1>
-            <p> I was born in Helsinki, and have lived in Beijing and
-                Stockholm. These days, I'm attending a Full Stack
+            <p> I was born in Helsinki and have 
+                lived in Beijing and Stockholm. 
+                Currently, I’m based in Hong Kong. 
+                These days, I'm attending a Full Stack
                 Software Engineering bootcamp at
-                <a style="color: inherit" href="https://www.xccelerate.co/">Xccelerate</a>.
+                <a style="color: inherit" 
+                href="https://www.xccelerate.co/">Xccelerate</a>.
                 <br><br>
                 To me, programming is a creative outlet and a means
                 to pursue my ideas and visions to create better products
